# lion_linker

./: .env.template  .gitignore  .pre-commit-config.yaml  README.md  api-sample-response.md  cli.py  movies.csv  output_test.csv  prompt_template.txt  pyproject.toml  requirements.txt  setup.py  test.ipynb
app/: __init__.py  app.py  dependencies.py  main.py
app/api/: routes.py
app/core/: api_limits.py  config.py  linker_defaults.py
app/models/: api.py  dataset.py  jobs.py  queue.py
app/services/: linker.py  task_queue.py
app/storage/: state.py
docker/: Dockerfile  docker-compose.yaml
docker/api/: docker-compose.yaml
docker/cli/: Dockerfile  docker-compose.yaml
docker/service/: Dockerfile  docker-compose-dev.yaml  docker-compose.yaml  requirements-app.txt
docs/: api_reference.md
docs/static/: docs.html  reference.html
examples/: send_film_annotation.py
lion_linker/: candidate_cache.py  cli.py  core.py  lion_linker.py  prompt_store.py  requirements.txt  result_store.py  retrievers.py  utils.py
lion_linker/prompt/: examples.txt  generator.py  optimized_prompt_template.txt  prompt_template_base.txt  prompt_template_detailed.txt  prompt_template_few_shot.txt  prompt_template_in_context.txt  prompt_template_tablellama.txt
tests/: test.py  test_core.py  test_llm_response_parsing.py  test_prediction_summary.py
tests/data/: film.csv  film_input_no_QIDs.csv  film_with_QIDs.csv  imdb_top_1000.csv  movies.csv  testing.csv
