[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lion_linker"
version = "0.1.0"
description = "A package for entity linking using LionLinker."
authors = [
    {name = "Roberto Avogadro", email = "roberto.avogadro@sintef.no"}
]
urls = {Homepage = "https://github.com/roby-avo/lion_linker"}
readme = "README.md"
requires-python = ">=3.6"
license = {text = "MIT"}

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]

dependencies = [
    "pandas==2.2.3",
    "requests==2.32.3",
    "ollama==0.3.3",
    "aiohttp==3.10.10",
    "asyncio==3.4.3",
    "tqdm==4.67.0",
    "openai==1.54.4",
    "groq==0.12.0",
    "python-dotenv==1.0.1"
]

[project.optional-dependencies]
dev = [
    "flake8==4.0.1",
    "black==21.12b0",
    "isort==5.10.2",
    "mypy==0.910",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["lion_linker*"]

[project.scripts]
lion-linker = "lion_linker.cli:main"